--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="rtitle">
         <b>Register for Classes</b>
       </p>
-      <form action="registration.html" method="get">
+      <form action="registration.html?sname={sname}&sid={sid}&grade={grade}" method="get">
         
         <label for="name"> Student Name:</label><br />
         <input
